# athleteview-ai-engine

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
ai-engine/: Dockerfile  requirements.txt
ai-engine/src/: config.py  main.py
ai-engine/tests/: test_super_resolution.py  test_tracker.py
biometrics/: Dockerfile  requirements.txt
biometrics/src/: config.py  main.py
config/: hardware_spec_v3.json
demo-pipeline/: README.md  demo_pipeline.py  generate_sample.py  overlay_engine.py  requirements.txt  stabilizer.py  tracker.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
firmware/: CMakeLists.txt  README.md
firmware/include/: athleteview.h
firmware/src/: main.c
firmware/src/camera/: encoder.c  imx577_driver.c
firmware/src/connectivity/: ble.c  srt_stream.c  wifi6.c
firmware/src/dsp/: imu_fusion.c  ppg_filter.c
firmware/src/power/: battery_mgmt.c  low_power.c
firmware/src/sensors/: bme280.c  icm42688p.c  max30208.c  max86141.c
gateway/: Dockerfile  jest.config.js  package.json
gateway/src/: index.ts
gateway/tests/: streams.test.ts
infra/kubernetes/: ai-engine-deployment.yaml  biometrics-deployment.yaml  gateway-deployment.yaml  ingress.yaml  namespace.yaml  streaming-deployment.yaml
infra/monitoring/: prometheus.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
shared/constants/: sports.py
streaming/: Dockerfile  requirements.txt
training/: Dockerfile  requirements.txt
(+69 files in other folders)
